# ddlcheck

./: .ddlcheck  .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  mypy.ini  print_tree.py  pyproject.toml
.github/workflows/: ci.yml
checks/: index.html
checks/add_column/: index.html
checks/alter_column_type/: index.html
checks/create_index/: index.html
checks/drop_column/: index.html
checks/drop_table/: index.html
checks/rename_column/: index.html
checks/set_not_null/: index.html
checks/truncate/: index.html
checks/update_without_filter/: index.html
configuration/: index.html
custom_checks/: index.html
development/: index.html
docs/: configuration.md  custom_checks.md  development.md  index.md  installation.md  usage.md
docs/checks/: add_column.md  alter_column_type.md  create_index.md  drop_column.md  drop_table.md  index.md  rename_column.md  set_not_null.md  truncate.md  update_without_filter.md
docs/stylesheets/: extra.css
installation/: index.html
search/: search_index.json
src/ddlcheck/: cli.py
src/ddlcheck/core/: utils.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_cli.py  test_cli_additional.py  test_logger.py  test_models.py
tests/checks/: __init__.py  test_add_column.py  test_alter_column_type.py  test_check_helpers.py  test_create_index.py  test_drop_table.py  test_truncate.py
tests/core/: test_check.py
tests/test_sql/: edge_cases.sql  risky_operations.sql
usage/: index.html
